--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.0",
+    "react-modal": "^3.4.5",
     "react-scripts": "1.1.4",
     "reactjs-popup": "^1.1.1"
   },
