--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "dependencies": {
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
+    "react-bootstrap-sidebar": "0.0.1",
     "react-dom": "^16.4.0",
+    "react-icons-kit": "^1.1.5",
     "react-modal": "^3.4.5",
     "react-scripts": "1.1.4",
+    "react-sidemenu": "0.0.14",
+    "react-sidenav": "^2.1.3",
     "reactjs-popup": "^1.1.1"
   },
   "scripts": {
